refactor #3: 테스트 실행 상태를 TestRunContext로 묶고 실행마다 가상 스레드 executor를 새로 만들도록 변경 (CompletableFuture 제거)
카운터·지연 통계·에러 집계를 실행 단위 객체(TestRunContext)로 묶어 executeRequest/buildResult의 낱개 파라미터 10여 개를 없앴다. 동작은 그대로 유지했다.

워커를 CompletableFuture 5만 개로 감싸던 방식 대신, 실행마다 RunExecutorFactory가 만든 executor를 try-with-resources로 사용해 close()가 모든 워커의 완료를 보장하게 했다. 스레드 이름에 testId를 넣어(vu-<testId>-N) 스레드 덤프와 JFR에서 어느 실행의 워커인지 구분할 수 있다. 워커가 예외로 비정상 종료하면 조용히 넘어가지 않고 IllegalStateException으로 드러난다.

컨트롤러는 executor 없이 runAsync를 호출해 공용 ForkJoinPool(commonPool)을 점유하던 것을 주입받은 가상 스레드 executor로 바꿨다. 이에 맞춰 컨트롤러 테스트는 동기 executor를 주입해 비동기 호출 완료를 기다리거나 추측하지 않고 결정적으로 검증한다.

이 변경만으로는 성능이 달라지지 않는다(벤치마크 ablation 확인). 격리, 종료 보장, 테스트 용이성을 위한 구조 개선이다.